infro/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules: # will be an array # all the different routing rules that we want to apply to teach the ingress controller how to take incomming traffice(request) and route them off to our different pods.
    - host:  posts.com # register post service # it will take incoming traffic and send it off to our post service.
      http:
        paths:
          - path: /posts/create
            pathType: Prefix # for the other services this might change to ImplementationSpecific instead of prefix.
            backend:
              service:
                name: posts-clusterip-srv
                port: 
                  number: 4000
          - path: /posts
            pathType: ImplementationSpecific 
            backend:
              service:
                name: query-srv
                port: 
                  number: 4002
          - path: /posts/?(.*)/comments # dynamic wildcard thing.
            pathType: ImplementationSpecific
            backend:
              service:
                name: comments-srv
                port:
                  number: 4001
          - path: /?(.*) # If you use react router then you would use a regex approach like  /?(.*), this will make sure that it matches any app and always shows the react application.
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
